--- a/fms-client/src/app/eventdetails/eventdetails.component.html
+++ b/fms-client/src/app/eventdetails/eventdetails.component.html
@@ -66,7 +66,7 @@
           <div class="card mb-2" *ngFor="let fbs of participantFeedbacks">
             <!-- <div class="card-header">Header</div> -->
             <div class="card-body">
-              <div class="row" *ngFor="let fb of fbs">
+              <div class="border-bottom" *ngFor="let fb of fbs.feedback">
                 {{fb}}
               </div>
             </div>
@@ -83,13 +83,20 @@
     <div class="col-sm">
       <div class="card mb-2">
         <div class="card-header bg-primary">
-          <div class="text-uppercase text-white">Non Participates</div>
+          <div class="text-uppercase text-white">Non Participated</div>
         </div>
         <div class="card-body">
-          <div class="card">
-          <div class="card-header">Header</div>
+          <div class="card mb-2" *ngFor="let fbs of NotParticipatedFeedbacks">
+            <!-- <div class="card-header">Header</div> -->
+            <div class="card-body">
+              <div class="border-bottom" *ngFor="let fb of fbs.feedback">
+                {{fb}}
+              </div>
+            </div>
+            <!-- <div class="card-footer">Footer</div> -->
+          </div>
         </div>
-      </div>    
+      <!-- </div>     -->
       </div>     
     </div>
     <div class="col-sm">
@@ -98,8 +105,14 @@
           <div class="text-uppercase text-white">Unregistered</div>        
         </div> 
         <div class="card-body">
-          <div class="card">
-            <div class="card-header">Header</div>
+          <div class="card mb-2" *ngFor="let fbs of UnregisteredFeedbacks">
+            <!-- <div class="card-header">Header</div> -->
+            <div class="card-body">
+              <div class="border-bottom" *ngFor="let fb of fbs.feedback">
+                {{fb}}
+              </div>
+            </div>
+            <!-- <div class="card-footer">Footer</div> -->
           </div>
         </div>   
       </div>      
