--- a/fms-client/src/app/participantfeedback/participantfeedback.component.html
+++ b/fms-client/src/app/participantfeedback/participantfeedback.component.html
@@ -1,7 +1,7 @@
 <div class="card mt-3">
   <div class="card-body bg-white">
     <h6 class="text-center text-success">
-      Feedback request for 1st Dec PM- Christmas fair to save a school swimming pool on Dec 24 2018
+      Feedback request for {{eventDetails.eventName}}
     </h6>
   </div>
 </div>
