--- a/fms-client/src/app/report/report.component.html
+++ b/fms-client/src/app/report/report.component.html
@@ -1,24 +1,63 @@
-
-      <div class="card" id='grid'>
-        <div class="card-header bg-primary ">
-          <div class="text-white text-uppercase">Events</div>
-        </div>
-        <div class="card-body">
-        <div class="float-right">
-                  <jqxButton (onClick)="clearFiltering()" class="m-1 bg-danger text-white">Clear Filters</jqxButton>
-                   <jqxButton (onClick)="excelBtnOnClick()"class="bg-primary text-white" >Download Excel</jqxButton>            
+<div *ngIf="user.role=='Admin'" class="card mb-2">
+  <div class="card-header bg-primary ">
+    <div class="text-white text-uppercase">Actions</div>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="alert alert-info">
+          <div class="row">
+            <div class="col-md-1 m-auto">
+              <h2><i class="fa fa-file-excel-o" aria-hidden="true"></i></h2>
+            </div>
+            <form [formGroup]="reportForm" (ngSubmit)="SendEmail()" class="form-inline col-md-11">
+              <div class="col-md-11">
+                <div class="col-md-11 font-weight-bold">Email Report</div>
+                <span class="col-md-2">Employee Id</span>
+                <input type="text" class=" col-md-4" placeholder="Enter email address" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />                
+                <button class="col-md-3 btn bg-primary ml-2 mr-2 text-white">Send Email
+                </button>
+                <div *ngIf="submitted && f.username.errors" class="invalid-feedback col-md-3">
+                  <div *ngIf="f.username.errors.required">Email is required</div> 
+                  <div *ngIf="f.username.errors.email">Email is invalid</div>                 
                 </div>
-                <div class="">
-                <jqxGrid #jqGrid
-                [width]="getWidth()"  [source]="dataAdapter" [columns]="columns" [columnsresize]="true">
-               </jqxGrid>
+                <span *ngIf="emailStatusText">{{emailStatusText}}</span>
               </div>
-             
-              </div>
+            </form>            
+          </div>
         </div>
-      
-  
-  
-      
-  
-    
+      </div>
+      <div class="col-md-6">
+        <div class="alert alert-warning Actioncolumn">
+          <div class="text-right">
+            <div class="row">
+              <div class="col-md-11">
+                <div>Future Implementations</div>
+                <span>A placeholder can be used for adding any other actions in future </span>
+              </div>
+              <div class="col-md-1 m-auto">
+                <h2><i class="fa fa-envelope" aria-hidden="true"></i></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card" id='grid'>
+  <div class="card-header bg-primary ">
+    <div class="text-white text-uppercase">Events</div>
+  </div>
+  <div class="card-body">
+    <div class="float-right">
+      <jqxButton (onClick)="clearFiltering()" class="m-1 bg-danger text-white">Clear Filters</jqxButton>
+      <jqxButton (onClick)="excelBtnOnClick()" class="bg-primary text-white">Download Excel</jqxButton>
+    </div>
+    <div class="">
+      <jqxGrid #jqGrid [width]="getWidth()" [source]="dataAdapter" [columns]="columns" [columnsresize]="true">
+      </jqxGrid>
+    </div>
+
+  </div>
+</div>
